app/stylesheets/feeds/_subscribe.sass
.new_subscription
  button
    width: 100%
    display: block
    text-align: center
    +border-radius(4px)
    text-decoration: none
    color: #fff
    border: 1px solid #355371
    padding: 0px
    span
      +serif
      line-height: 1
      font-size: 14px
      +border-radius(3px)
      padding: 6px 3px
      display: block
      background-color: #3b6085
      border: 1px solid #6c88a4
      bottom-color: #425d7d

.feed.item
  .new_subscription
    float: right
    margin-top: -10px

